--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="header">
       <header>
-        <div><img src="Img/logo.png" alt="Martins Aquarium" /></div>
+        <div><img src="Images/logo.png" alt="Martins Aquarium" /></div>
         <h1>
           A collection of exotic fish with care tips and Martin's personal
           favorite fish harvest locations.
