Finished chapter 11 and 12

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
+    <!-- Header of the page  -->
     <div class="header">
       <header>
         <div><img src="Images/logo.png" alt="Martins Aquarium" /></div>
@@ -21,12 +22,22 @@
         </h1>
       </header>
     </div>
+    <!-- Main content section of the page  -->
     <div class="fishTank">
       <section class="fishList"></section>
-      <section>
-        <h2>Tips</h2>
+      <section class="Tips">
+        <h2>Fishing Tips</h2>
+        <section class="tipList"></section>
       </section>
     </div>
+    <!-- Harvest Location Section of the page  -->
+    <section class="Location">
+      <h2>Locations</h2>
+      <section class="locationList"></section>
+    </section>
     <script type="module" src="/scripts/main.js"></script>
+    <footer>
+      <p>&copy;Copyright Colby Ryan</p>
+    </footer>
   </body>
 </html>
